@@ -16,6 +16,7 @@
      ARCH: QuickSearch is moved to KrView from Detailed/Brief views
      ARCH: Keyboard handling is moved to KrView from Detailed/Brief views
 
+    FIXED: [ 2227421 ] Mount cdrom no longer needs root permission
     FIXED: Krusader steps into wrong directory, when a file changes in an inactive tab
     FIXED: When neither "kompare", "kdiff3" nor "xxdiff" in PATH, the program set in
            "diff utility" was ignored. Under Windows, look for them with ".exe" suffix
